<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAccount"
            android:layout_centerHorizontal="true"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/layout_padding_30dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_padding_16dp"
        app:layout_anchor="@id/rvAccount"
        app:layout_anchorGravity="bottom|right"
        app:layout_behavior="org.apache.fineract.utils.ScrollFabBehavior"
        app:srcCompat="@drawable/ic_add_black_24dp" />

    <include
        layout="@layout/layout_exception_handler"
        android:id="@+id/layoutError"
        android:visibility="gone"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>