...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/identifier"
                        android:textColor="@color/gray_dark" />

                    <TextView
                        android:id="@+id/tvIdentifierAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_padding_8dp"
                        android:textColor="@color/black"
                        tools:text="@string/medium_text" />

...
