...
                android:id="@+id/llTellerTask"
                style="@style/circleLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivTellerTask"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/ic_lock_black_24dp" />

            </LinearLayout>

...
                android:layout_marginRight="@dimen/layout_padding_8dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_14sp" />

            <Button
                android:id="@+id/btnTellerSubmitTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tasks"
                android:textAllCaps="false" />

...
