...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_padding_16dp"
                        android:text="@string/telleraccountidentifier"
                        android:textColor="@color/gray_dark" />

                    <TextView
                        android:id="@+id/tellerDetailsAccountIdentifier"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_padding_8dp"
                        android:textColor="@color/black"
                        tools:text="@string/medium_text" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_padding_12dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:id="@+id/llTellerDetailsTasks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackgroundBorderless">

                    <LinearLayout
                        android:layout_width="wrap_content"
...
